--- a/en/staking/index.html
+++ b/en/staking/index.html
@@ -3744,7 +3744,7 @@
                         _ngcontent-ng-c3008358114
                         target="_blank"
                         class="link m-0"
-                        href="https://t.me/MAXIDOGE_ROOM"
+                        href="https://t.me/realmaxidoge"
                         ><img
                           _ngcontent-ng-c3008358114
                           loading="eager"
@@ -3754,7 +3754,7 @@
                         _ngcontent-ng-c3008358114
                         target="_blank"
                         class="link m-0"
-                        href="https://x.com/REALMAXIDOGE"
+                        href="https://x.com/MAXIDOGEATH"
                         ><img
                           _ngcontent-ng-c3008358114
                           loading="eager"
@@ -4011,7 +4011,7 @@
                   >
                     <a
                       _ngcontent-ng-c850680539
-                      href="https://t.me/MAXIDOGE_ROOM"
+                      href="https://t.me/realmaxidoge"
                       target="_blank"
                       ><img
                         _ngcontent-ng-c850680539
@@ -4021,7 +4021,7 @@
                         class="icon" /></a
                     ><a
                       _ngcontent-ng-c850680539
-                      href="https://x.com/REALMAXIDOGE"
+                      href="https://x.com/MAXIDOGEATH"
                       target="_blank"
                       ><img
                         _ngcontent-ng-c850680539
