--- a/index.html
+++ b/index.html
@@ -7038,7 +7038,7 @@
                         _ngcontent-ng-c3008358114
                         target="_blank"
                         class="link m-0"
-                        href="https://t.me/MAXIDOGE_ROOM"
+                        href="https://t.me/realmaxidoge"
                         ><img
                           _ngcontent-ng-c3008358114
                           loading="eager"
@@ -7048,7 +7048,7 @@
                         _ngcontent-ng-c3008358114
                         target="_blank"
                         class="link m-0"
-                        href="https://x.com/REALMAXIDOGE"
+                        href="https://x.com/MAXIDOGEATH"
                         ><img
                           _ngcontent-ng-c3008358114
                           loading="eager"
@@ -10739,7 +10739,7 @@
                   ></svg-icon>
                 </div>
                 <a
-                  href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0x43b0cff907b093e9bbe378f356dd025e117b3b59"
+                  href="https://app.uniswap.org/swap?inputCurrency=ETH&outputCurrency=0xcomingsoon"
                   ><button _ngcontent-ng-c3250521269 class="btn btn-secondary">
                     Buy $MAXI
                   </button></a
@@ -11210,7 +11210,7 @@
                   >
                     <a
                       _ngcontent-ng-c850680539
-                      href="https://t.me/MAXIDOGE_ROOM"
+                      href="https://t.me/realmaxidoge"
                       target="_blank"
                       ><img
                         _ngcontent-ng-c850680539
@@ -11220,7 +11220,7 @@
                         class="icon" /></a
                     ><a
                       _ngcontent-ng-c850680539
-                      href="https://x.com/REALMAXIDOGE"
+                      href="https://x.com/MAXIDOGEATH"
                       target="_blank"
                       ><img
                         _ngcontent-ng-c850680539
