--- a/staking.html
+++ b/staking.html
@@ -3740,7 +3740,7 @@
                         _ngcontent-ng-c3008358114
                         target="_blank"
                         class="link m-0"
-                        href="https://t.me/MAXIDOGE_ROOM"
+                        href="https://t.me/realmaxidoge"
                         ><img
                           _ngcontent-ng-c3008358114
                           loading="eager"
@@ -3750,7 +3750,7 @@
                         _ngcontent-ng-c3008358114
                         target="_blank"
                         class="link m-0"
-                        href="https://x.com/REALMAXIDOGE"
+                        href="https://x.com/MAXIDOGEATH"
                         ><img
                           _ngcontent-ng-c3008358114
                           loading="eager"
@@ -4051,7 +4051,7 @@
                   >
                     <a
                       _ngcontent-ng-c850680539
-                      href="https://t.me/MAXIDOGE_ROOM"
+                      href="https://t.me/realmaxidoge"
                       target="_blank"
                       ><img
                         _ngcontent-ng-c850680539
@@ -4061,7 +4061,7 @@
                         class="icon" /></a
                     ><a
                       _ngcontent-ng-c850680539
-                      href="https://x.com/REALMAXIDOGE"
+                      href="https://x.com/MAXIDOGEATH"
                       target="_blank"
                       ><img
                         _ngcontent-ng-c850680539
